--- a/modules/Module0.Rmd
+++ b/modules/Module0.Rmd
@@ -154,7 +154,7 @@ We can also send commands to the Terminal by using the `system()` command in R. 
 
 ```
 
-Now let's open Terminal and practice there. We can access a Terminal 1) in RStudio; 2) by opening an application on our computer; or 3) by using the HUNT Cloud Workbench and selecting Terminal.
+Now let's open Terminal and practice there. Return to the Launcher and select Terminal.
 
 HUNT Cloud uses the Linux operating system called Ubuntu. The shell is the software the interprets and executes the commands we type. Common shells are called bash, sh, csh, and tcsh. There are several basic Linux Terminal commands you should know. Copy and paste or type the following commands into the Terminal to see what they do.
 
