Update to be the NHS data

--- a/activities/Activity1.Rmd
+++ b/activities/Activity1.Rmd
@@ -11,31 +11,52 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Activity 1
 
-Use information from Module 1 and Module 2 to read in sensitive data 
+Objective: Use information from Module 1 and Module 2 to read in sensitive data 
 
-The Medical Information Mart for Intensive Care III (MIMIC-III) dataset is a large, de-identified and publicly-available collection of medical records. This was published in 2016. We are using the MIMIC-III Clinical Database Demo which is open access. It is downloadable from PhysioNet, but I've already put it on HUNT Cloud. It is only for 100 patients, so we have a situation with "big-p, little-n” denoted as p >> n which means there are many more predictors than samples in the data.
+For the hands-on application of what you've been learning, we are going to use artificial data sets from the United Kingdom's National Health Service. These are downloaded from [here](https://digital.nhs.uk/services/artificial-data).
 
-The newest data set, MIMIC-IV, is also available for certain users that sign the data use agreement and document human ethics training. Physionet calls this "Credientialed Access."
+We need a data dictionary to understand what the columns represent. We are focusing on the admitted patient care data today.Use the excel file HES+TOS+V2.04 and use the HES APC TOS tab.
 
+We are using the sample which is 10,000 rows instead of 1 million rows in the "full" dataset. This is due to time and memory constraints on the lab, but you could absolutely do this type of analysis on large sensitive data like the full sample available.
 
 ```{r}
 ##call libraries
-library(data.table)
 library(tidyverse)
 
-data_dir<-"/path/to/MIMIC/"
+data_dir<-"/mnt/work/workbench/bwolford/scratch/bwolford/artificial_hes_apc_202302_v1_sample/artificial_hes_apc_0102.csv"
 
-#read in PATIENTS.csv
+#read in .csv
+df<-read_csv(data_dir)
 
-patdat<-fread(paste0(data_dir,"PATIENTS.csv"))
-
-head(patdat)
-
-#key for all diagnoses
-diagnoses<-fread(paste0(data_dir,"D_ICD_DIAGNOSES.csv"))
-
-#patient diagnoses
-diagdat<-fread(paste0(data_dir,"DIAGNOSES_ICD.csv"))
+glimpse(df)
 ```
 
-In the future, you may be interested in using synthetic data which avoids some of the limitations and restrictions of senstiive data. You may be interested in [Synthea](https://github.com/synthetichealth/synthea). This is a Synthetic Patient Population Simulator. The goal is to output synthetic, realistic (but not real), patient data and associated health records in a variety of formats.
+Let's focus on the diagnoses (DIAG_3_01) the admission date (ADMIDATE); the discharge date (DISDATE); Date of Birth (MYDOB); and sex (SEX). What are the first steps we would take if we want to study what diagnoses are associated with a longer hospital admission time?
+
+The tibble shows the dates in a "Date" class. To manipualte dates we can use the `Sys.Date` functionality or we can use the [`lubridate` package] but there is also `clock` which offers a "tidy" way of [managing dates and times](https://www.tidyverse.org/blog/2021/03/clock-0-1-0/).
+
+```{r}
+
+library(lubridate)
+
+#make a smaller dataset to work with
+sub<-df %>% select(DIAG_3_01, ADMIDATE, DISDATE,PSEUDO_HESID,MYDOB, SEX)
+
+#number of days someone was admitted
+sub<-sub %>% mutate(duration=as.numeric(DISDATE-ADMIDATE))
+
+#how many different diagnoses do we have in the dataset?
+sub %>% summarise(unique_count = n_distinct(DIAG_3_01))
+ 
+#which diagnosis is most frequent?
+sub %>% group_by(DIAG_3_01) %>% summarize(count=n())
+
+#create a histogram of the diagnoses
+
+#create a histogram of the duration of admission
+
+#how can you calculate the age at admission using the month and year DOB which is in a character format instead of a date format
+
+```
+
+This data could be used to ask a lot of questions. What kind of hypotheses do you have based on what you have seen so far? Think about what you might like to research using AI methods. We will continue with this dataset in the next two activities.
